# qrgenkit

./: README.md  main.py  pyproject.toml  requirements.txt
generators/: base_generator.py  list_generator.py  range_generator.py  single_generator.py
qr/: qr_generator.py
src/qrgen/: __init__.py
src/qrgen/generators/: base_generator.py  list_generator.py  range_generator.py  single_generator.py
src/qrgen/qr/: qr_generator.py
tests/generators/: test_list_generator.py  test_range_generator.py  test_single_generator.py  test_single_qr_generator.py
