[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "qrgen"
version = "0.1.0"
description = "A simple QR code generation utility with list, range, and single generators."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Manty" }
]

requires-python = ">=3.10"

dependencies = [
    "pillow==12.0.0",
    "qrcode==8.2"
]

[project.urls]
Homepage = "https://example.com"
Repository = "https://example.com/repo"

[tool.setuptools.packages.find]
where = ["src"]
